fill in garbage

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "typescript-npm-package-template",
+  "name": "ts-jackett-api",
   "version": "0.0.0-development",
-  "description": "A template for creating npm packages using TypeScript and VSCode",
+  "description": "A TypeScript wrapper for the Jackett API",
   "main": "./lib/index.js",
   "files": [
     "lib/**/*"
@@ -19,32 +19,27 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/ryansonshine/typescript-npm-package-template.git"
+    "url": "git+https://github.com/marnixah/ts-jackett-api.git"
   },
   "license": "MIT",
   "author": {
-    "name": "Ryan Sonshine",
-    "email": "ryansonshine@users.noreply.github.com",
-    "url": "https://github.com/ryansonshine"
+    "name": "Marni",
+    "email": "marnixah@users.noreply.github.com",
+    "url": "https://github.com/marnixah"
   },
   "engines": {
     "node": ">=12.0"
   },
   "keywords": [
-    "boilerplate",
-    "template",
+    "jackett",
+    "api",
     "typescript",
-    "vscode",
-    "jest",
-    "husky",
-    "commitizen",
-    "semantic-release",
-    "codecov"
+    "wrapper"
   ],
   "bugs": {
-    "url": "https://github.com/ryansonshine/typescript-npm-package-template/issues"
+    "url": "https://github.com/ryansonshine/ts-jackett-api/issues"
   },
-  "homepage": "https://github.com/ryansonshine/typescript-npm-package-template#readme",
+  "homepage": "https://github.com/ryansonshine/ts-jackett-api#readme",
   "devDependencies": {
     "@ryansonshine/commitizen": "^4.2.8",
     "@ryansonshine/cz-conventional-changelog": "^3.3.4",
